--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.562.0",
+    "marked": "^17.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^3.4.0",
@@ -34,6 +35,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@astrojs/node": "^8.3.0",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@tailwindcss/typography": "^0.5.19",
