fix: strapi permissions and contact form

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "@repo/ui": "workspace:*",
     "@repo/utils": "workspace:*",
     "@types/react": "^18.2.48",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.2.1",
     "class-variance-authority": "^0.7.1",
@@ -28,6 +29,7 @@
     "lucide-react": "^0.562.0",
     "marked": "^17.0.1",
     "react": "^18.2.0",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
